# mcpatlas

./: .gitignore  ADOPTERS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEEP_PLAN.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  MAKEFILE.md  MCP_BLUEPRINT.md  Makefile  README.md  ROADMAP.md  SECURITY.md  deny.toml
.cursor/agents/: README.md  architecture-reviewer.md  cncf-readiness-advisor.md  distributed-systems-reviewer.md  documentation-architect.md  graph-database-architect.md  helm-chart-architect.md  kubernetes-operator-engineer.md  observability-engineer.md  performance-profiler.md  plugin-sdk-designer.md  security-auditor.md  storage-designer.md  supply-chain-guardian.md  tech-debt-cleaner.md  test-coverage-maximizer.md  vector-search-engineer.md  wasm-plugin-architect.md
.cursor/rules/: cncf-mcp-and-api.mdc  cncf-productivity-skills.mdc  cncf-release-and-deploy.mdc  cncf-rust-standards.mdc  cncf-security-compliance.mdc
.cursor/skills/cncf-pre-commit/: SKILL.md
.cursor/skills/cncf-release-checklist/: SKILL.md
.cursor/skills/cncf-rfc-and-governance/: SKILL.md
.cursor/skills/cncf-storage-and-architecture/: SKILL.md
.cursor/skills/devops/: SKILL.md
.cursor/skills/mcp-expertise/: SKILL.md
.cursor/skills/plugin-development/: SKILL.md
.cursor/skills/product-manager/: SKILL.md
.cursor/skills/rust-expertise/: SKILL.md
.cursor/skills/security/: SKILL.md
.cursor/skills/solution-architect/: SKILL.md
.cursor/skills/technical-writer/: SKILL.md
.cursor/skills/testing-qa/: SKILL.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  data-sync.yml  pages.yml  release.yml  tag-on-main.yml
crates/cncf-mcp-cli/: Cargo.toml
crates/cncf-mcp-cli/src/: main.rs
crates/cncf-mcp-core/: Cargo.toml
crates/cncf-mcp-core/src/: config.rs  error.rs  lib.rs  main.rs  server.rs
crates/cncf-mcp-core/src/tools/: graph.rs  mod.rs  recommend.rs  search.rs
crates/cncf-mcp-core/tests/: http_endpoint_test.rs  mcp_protocol_test.rs
crates/cncf-mcp-data/: Cargo.toml
crates/cncf-mcp-data/src/: artifacthub.rs  embeddings.rs  lib.rs  pipeline.rs  storage.rs  summary.rs
crates/cncf-mcp-graph/: Cargo.toml
crates/cncf-mcp-graph-surrealdb/: Cargo.toml  README.md
crates/cncf-mcp-graph-surrealdb/src/: backend.rs
crates/cncf-mcp-graph/src/: engine.rs  schema.rs
crates/cncf-mcp-plugins/: Cargo.toml
crates/cncf-mcp-plugins/src/: host.rs  manifest.rs
crates/cncf-mcp-search/: Cargo.toml
crates/cncf-mcp-search/benches/: search_bench.rs
crates/cncf-mcp-search/src/: index.rs  lib.rs  query.rs
crates/cncf-mcp-search/tests/: integration.rs
crates/cncf-mcp-vector/: Cargo.toml
crates/cncf-mcp-vector/src/: backend.rs  lib.rs
crates/mcp-atlas-cli/: Cargo.toml
crates/mcp-atlas-cli/src/: main.rs
crates/mcp-atlas-core/: Cargo.toml
crates/mcp-atlas-core/src/: audit.rs  config.rs  main.rs  server.rs
crates/mcp-atlas-core/src/tools/: dispatch.rs  graph.rs  issue.rs  mod.rs  prompts.rs  recommend.rs  schemas.rs  search.rs
crates/mcp-atlas-core/tests/: http_endpoint_test.rs  mcp_protocol_test.rs
crates/mcp-atlas-data/: Cargo.toml
crates/mcp-atlas-data/src/: artifacthub.rs  cache.rs  embeddings.rs  github.rs  landscape.rs  models.rs  pipeline.rs  summary.rs
crates/mcp-atlas-graph/: Cargo.toml
crates/mcp-atlas-graph-surrealdb/: Cargo.toml  README.md
crates/mcp-atlas-graph-surrealdb/src/: backend.rs  lib.rs
crates/mcp-atlas-graph/src/: engine.rs  schema.rs
crates/mcp-atlas-plugins/: Cargo.toml
crates/mcp-atlas-plugins/src/: lib.rs  registry.rs  runtime.rs
crates/mcp-atlas-search/: Cargo.toml
crates/mcp-atlas-search/benches/: search_bench.rs
crates/mcp-atlas-search/src/: index.rs  query.rs
crates/mcp-atlas-search/tests/: integration.rs
crates/mcp-atlas-vector/: Cargo.toml
crates/mcp-atlas-vector/src/: backend.rs
deploy/docker/: Dockerfile  docker-compose.yml
deploy/helm/: README.md
deploy/helm/cncf-mcp/: Chart.yaml  values.schema.json  values.yaml
deploy/helm/cncf-mcp/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
deploy/helm/mcp-atlas/: Chart.yaml  values.schema.json  values.yaml
deploy/helm/mcp-atlas/templates/: NOTES.txt  deployment.yaml  hpa.yaml  pdb.yaml
deploy/homebrew/: README.md  cncf-mcp.rb  mcp-atlas.rb
docs/: CODEBASE_REFACTORING_REPORT.md
docs/book/: README.md  SUMMARY.md  book.toml
docs/book/src/: README.md  configuration.md  contributing.md  deployment.md  getting-started.md  plugin-development.md  resources-reference.md  tools-reference.md
docs/rfcs/: 0000-template.md  README.md
scripts/: verify-release.sh
site/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
site/public/: 404.html
site/src/: index.css  main.tsx  vite-env.d.ts
site/src/app/: App.tsx
site/src/components/diagram/: KnowledgeGraphMesh.tsx  index.ts
site/src/components/landing/: ArchitectureSection.tsx  BentoDemo.tsx  CTA.tsx  FeaturesGrid.tsx  Hero.tsx  MCPFlowDiagram.tsx  Problem.tsx  RoadmapSection.tsx  Solution.tsx  TerminalBlock.tsx  UseCases.tsx  heroIcons.tsx  index.ts
site/src/components/motion/: index.ts  sectionVariants.ts  useReducedMotion.ts
site/src/components/ui/: Badge.tsx  Container.tsx  Footer.tsx  Navbar.tsx  Section.tsx  Typography.tsx  bento-grid.tsx  floating-icons-hero-section.tsx  index.ts
site/src/content/docs/: architecture.md  configuration.md  contributing.md  deployment.md  getting-started.md  how-to-use.md  introduction.md  plugin-development.md  project-structure.md  prompts.md  resources-reference.md  roadmap.md  tools-reference.md  use-cases.md  vercel-web-analytics.md  workflow.md
site/src/layouts/: MainLayout.tsx
site/src/lib/: constants.ts  docs.ts  index.ts
site/src/pages/: DocPage.tsx  DocsLayout.tsx  LandingPage.tsx
