[package]
name = "cncf-mcp-cli"
description = "CLI companion tool for CNCF MCP Server management"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cncf-mcp-cli"
path = "src/main.rs"

[dependencies]
cncf-mcp-data = { workspace = true }
cncf-mcp-search = { workspace = true }
cncf-mcp-graph = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
