[package]
name = "cncf-mcp-core"
description = "CNCF Landscape MCP Server — core server and tool handlers"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
graph-surrealdb = ["dep:cncf-mcp-graph-surrealdb"]
vector-qdrant = ["dep:cncf-mcp-vector"]

[lib]
name = "cncf_mcp_core"
path = "src/lib.rs"

[[bin]]
name = "cncf-mcp"
path = "src/main.rs"

[dependencies]
cncf-mcp-data = { workspace = true }
cncf-mcp-search = { workspace = true }
cncf-mcp-graph = { workspace = true }
cncf-mcp-graph-surrealdb = { path = "../cncf-mcp-graph-surrealdb", optional = true }
cncf-mcp-vector = { path = "../cncf-mcp-vector", optional = true }
cncf-mcp-plugins = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-stream = "0.1"
tower = { version = "0.5", features = ["util", "limit"] }
tower-http = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
insta = { workspace = true }
http-body-util = "0.1"
hyper = "1"
