[package]
name = "cncf-mcp-plugins"
description = "WASM plugin runtime for extensible MCP tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# When enabled, add extism for full WASM runtime: runtime = ["dep:extism"]
runtime = []

[dependencies]
cncf-mcp-data = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
