[package]
name = "cncf-mcp-vector"
description = "Qdrant vector backend for CNCF MCP semantic search (Phase 2)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cncf-mcp-data = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
qdrant-client = { version = "1.7", default-features = false }
