[package]
name = "mcp-atlas-data"
description = "Data models and ingestion pipeline for CNCF Landscape"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
insta = { workspace = true }
