[package]
name = "mcp-atlas-graph"
description = "Knowledge graph for CNCF project relationships"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mcp-atlas-data = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
